--- a/client-app/app/templates/login.html
+++ b/client-app/app/templates/login.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>ログイン画面</title>
+    <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
     <div class="login-container">
